[tool.poetry]
name = "web3-reactor"
version = "0.1.0"
description = "A blockchain event processing suite based on python asyncio"
authors = ["majoson-chen"]
license = "MIT"
readme = "README.md"
packages = [{ include = "web3_reactor" }]

[tool.poetry.dependencies]
python = "^3.9"

web3 = "^6.8.0"
httpx = "^0.24.1"
loguru = "^0.7.0"
click = "^8.1.6"
werkzeug = "^2.3.6"
pyyaml = "^6.0.1"

[tool.poetry.group.http2.dependencies]
h2 = "^4.1.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest-asyncio = "^0.21.1"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
